# SimpleCards

./: .gitignore  CMakeLists.txt  README.md  ease_simulation.py  test.json  tmp.txt
example_decks/: Example.deck.json  Example.json
includes/: appconfig.h  card.h  deck.h  deckenums.h  deckmanager.h  deckmode.h  deckmodel.h  deckutils.h
qml/: Card.qml  CardEdit.qml  CheckBoxEntry.qml  DecksList.qml  DecksListView.qml  EditingListView.qml  EditingView.qml  FilepathText.qml  Info.qml  Main.qml  SettingsView.qml  StatsView.qml  TestingView.qml
src/: appconfig.cpp  card.cpp  card.h  deck.cpp  deck.h  deckmanager.cpp  deckmodel.cpp  deckutils.cpp  main.cpp
test_data/: Basi_di_dati.json  date_test.json  security.json  secutiry.json
